# dev-setup-app

./: .editorconfig  .gitattributes  ARCHITECTURE.md  Mac Os Visual Studio Code Development Setup - Complete Guide.docx  Makefile  README.md  VS Code Setup.docx  WORKFLOW_SETTINGS_INTEGRATION.md  WSL Setup with Tar file.docx  brandondsouza.ovpn  cargo-update.ps1  rebuild.ps1
.github/: AGENTS.md
.github/hooks/: no-git-push.json
.github/workflows/: build.yml
dev-setup-app/: .gitignore  Dockerfile  README.md  WSL_EXTENSION_FIX.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dev-setup-app/docs/: INSTALLATION_FLOW.md  INSTALLATION_GUIDE.md  MAC_INSTALLATION.md  QUICK_REFERENCE.md  README.md  TUNNELBLICK_GITLAB_SETUP.md
dev-setup-app/examples/: macos-vpn-workflow-template.json
dev-setup-app/scripts/django/: track_copy_tenant.py
dev-setup-app/scripts/macos/: check_vpn_status.sh  clone_repo.sh  connect_vpn.sh  connect_vpn_cli.sh  copy_tenant.sh  disconnect_vpn_cli.sh  disconnect_vpn_tunnelblick.sh  install_app.sh  install_frontend_deps.sh  install_git.sh  install_homebrew.sh  install_openvpn.sh  install_openvpn_cli.sh  install_pgadmin_mac.sh  install_pip_requirements.sh  install_tunnelblick_manual.sh  install_tunnelblick_sources.sh  install_xcode_clt.sh  pyenv_local.sh  python_interpreter.sh  setup_gitlab_ssh.sh  setup_mac_hosts.sh  setup_nvm.sh  setup_postgres.sh  setup_pyenv.sh  setup_redis.sh  setup_vscode.sh  setup_workspace.sh
dev-setup-app/scripts/windows/: admin_agent.ps1  check_vpn_status.ps1  clone_repo.sh  connect_vpn.ps1  copy_tenant.sh  disconnect_vpn.ps1  enable_wsl.ps1  import_wsl_tar.ps1  install_openvpn.ps1  install_pgadmin.ps1  install_workspace_extensions.ps1  migrate_shared.sh  pyenv_local.sh  python_interpreter.sh  revert_git_ssh.ps1  revert_vscode_windows.ps1  revert_windows_hosts.ps1  revert_wsl_distro.ps1  revert_wsl_features.ps1  revert_wsl_network.ps1  revert_wsl_shutdown.ps1  revert_wslconfig.ps1  setup_git_ssh.ps1  setup_git_ssh.sh  setup_gitlab_ssh.sh  setup_nvm_wsl.sh  setup_postgres_wsl.sh  setup_pyenv_wsl.sh  setup_redis_wsl.sh  setup_ubuntu_user_wsl.sh  setup_vscode_windows.ps1  setup_windows_hosts.ps1  setup_workspace.ps1  setup_wsl_cleanup.ps1  setup_wsl_network.ps1  setup_wslconfig_networking.ps1  start_gunicorn.sh  (+2 more)
dev-setup-app/src/: App.tsx  index.css
dev-setup-app/src-tauri/: Cargo.toml  app.manifest  app.rc  build.rs  tauri.conf.json
dev-setup-app/src-tauri/capabilities/: default.json
dev-setup-app/src-tauri/icons/: icon.icns
dev-setup-app/src-tauri/src/: admin_agent.rs  commands.rs  main.rs  orchestrator.rs  security.rs  state.rs
(+18 files in other folders)
