[package]
name = "dev-setup-app"
version = "1.0.0"
description = "Cross-platform developer environment installer"
authors = ["Dev Setup Team"]
license = ""
repository = ""
default-run = "dev-setup-app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-execute", "shell-open", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-exists", "path-all", "os-all", "dialog-all", "notification-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "6"
dirs = "5"

# Pin webkit2gtk to 0.18.0 on Linux — wry 0.24.11 is incompatible with 0.18.2
# (0.18.2 changed SettingsExt trait visibility, breaking wry's implicit usage)
[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=0.18.0", features = ["v2_28"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
