[package]
name = "dev-setup-app"
version = "1.0.0"
description = "Cross-platform developer environment installer"
authors = ["Dev Setup Team"]
license = ""
repository = ""
default-run = "dev-setup-app"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.6", features = ["shell-execute", "shell-open", "fs-read-file", "fs-write-file", "fs-read-dir", "fs-create-dir", "fs-exists", "path-all", "os-all", "dialog-all", "notification-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
which = "6"
dirs = "5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
